--- a/package.json
+++ b/package.json
@@ -24,20 +24,26 @@
     "passport-jwt": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-slick": "^0.28.1",
+    "react-topbar-progress-indicator": "^4.1.1",
+    "slick-carousel": "^1.8.1",
     "slug": "^5.2.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "ts-node": "^10.5.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "17.0.21",
     "@types/passport-jwt": "^3.0.6",
     "@types/react": "17.0.39",
+    "@types/react-slick": "^0.23.8",
     "@types/slug": "^5.0.3",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "sass": "^1.49.9",
     "typescript": "4.5.5"
   }
 }
