--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@hookstate/core": "^3.0.13",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
@@ -25,6 +26,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
+    "react-toastify": "^8.2.0",
     "react-topbar-progress-indicator": "^4.1.1",
     "slick-carousel": "^1.8.1",
     "slug": "^5.2.0",
