--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.6.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4",
     "next": "12.1.0",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
