feat: redis, cluster

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 PORT=3000
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL = http://localhost:3000
-MONGO_CONNECTSTRING = mongodb://127.0.0.1:27017
-MONGO_USER = rootuser
-MONGO_PASSWORD = rootpass
+MONGO_CONNECTSTRING = mongodb+srv://cluster0.ajuob.mongodb.net/chat-together
+MONGO_USER = toilahuong
+MONGO_PASSWORD = @admADM1996
 
 TOKEN_SECRET = toilahuong
 TOKEN_EXPIRESIN = 1h
