--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build:next": "next build",
     "build:server": "tsc --project tsconfig.server.json",
     "build": "npm run build:next && npm run build:server",
-    "start": "node dist/index.js"
+    "start": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
     "@hookstate/core": "^3.0.13",
     "@hookstate/persistence": "^3.0.0",
+    "@socket.io/cluster-adapter": "^0.2.0",
+    "@socket.io/redis-adapter": "^7.2.0",
+    "@socket.io/sticky": "^1.0.1",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
@@ -26,16 +29,18 @@
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
+    "pm2": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.2.0",
     "react-topbar-progress-indicator": "^4.1.1",
+    "redis": "^4.1.0",
     "slick-carousel": "^1.8.1",
     "slug": "^5.2.0",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
-    "ts-node": "^10.5.0"
+    "ts-node": "^10.8.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
