--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/node": "17.0.21",
     "@types/passport-jwt": "^3.0.6",
