--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 PORT=3000
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL = http://localhost:3000
-MONGO_CONNECTSTRING = mongodb+srv://cluster0.ajuob.mongodb.net/chat-together
-MONGO_USER = toilahuong
-MONGO_PASSWORD = @admADM1996
+MONGO_CONNECTSTRING = 
+MONGO_USER = 
+MONGO_PASSWORD = 
 
-TOKEN_SECRET = toilahuong
+TOKEN_SECRET = 
 TOKEN_EXPIRESIN = 1h
 
-REFRESH_TOKEN_SECRET = toilahuong
+REFRESH_TOKEN_SECRET = 
 REFRESH_TOKEN_EXPIRESIN = 7d
 
 SALT_ROUNDS = 10
