--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
   "dependencies": {
     "@hookstate/core": "^3.0.13",
     "@hookstate/persistence": "^3.0.0",
-    "@socket.io/cluster-adapter": "^0.2.0",
     "@socket.io/redis-adapter": "^7.2.0",
-    "@socket.io/sticky": "^1.0.1",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
@@ -26,12 +24,9 @@
     "firebase": "^9.6.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
-    "multer": "^1.4.4",
     "next": "12.1.0",
-    "nodemon": "^2.0.15",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
-    "pm2": "^5.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-slick": "^0.28.1",
@@ -41,8 +36,7 @@
     "slick-carousel": "^1.8.1",
     "slug": "^5.2.0",
     "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1",
-    "ts-node": "^10.8.0"
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^6.2.1",
@@ -57,6 +51,7 @@
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "sass": "^1.49.9",
+    "ts-node": "^10.8.0",
     "typescript": "4.5.5"
   }
 }
