--- a/package.json
+++ b/package.json
@@ -15,20 +15,24 @@
     "@socket.io/redis-adapter": "^7.2.0",
     "axios": "^0.26.0",
     "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.2",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-http-proxy": "^1.6.3",
     "firebase": "^9.6.7",
+    "form-data": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
+    "multer": "^1.4.4-lts.1",
     "next": "12.1.0",
+    "node-fetch": "^2.6.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-easy-crop": "^4.2.0",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.2.0",
     "react-topbar-progress-indicator": "^4.1.1",
@@ -43,6 +47,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "17.0.21",
     "@types/passport-jwt": "^3.0.6",
     "@types/react": "17.0.39",
