--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,6 @@ REFRESH_TOKEN_EXPIRESIN = 7d
 
 SALT_ROUNDS = 10
 
+REDIS_SERVER = redis://104.248.151.29:6379
+REDIS_PASSWORD = 
 SERVER_FILE_MANAGER = 
