--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.2",
     "dotenv": "^16.0.0",
+    "emoji-picker-react": "^3.5.1",
     "express": "^4.17.3",
     "express-http-proxy": "^1.6.3",
     "firebase": "^9.6.7",
