--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mongoose": "^6.2.3",
     "multer": "^1.4.4-lts.1",
     "next": "12.1.0",
+    "next-build-id": "^3.0.0",
     "node-fetch": "^2.6.1",
     "passport": "^0.5.2",
     "passport-jwt": "^4.0.0",
