--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
       NEXT_PUBLIC_APP_URL: http://localhost:3000
       MONGO_CONNECTSTRING: mongodb+srv://cluster0.ajuob.mongodb.net/chat-together
       MONGO_USER: toilahuong
-      MONGO_PASSWORD: @admADM1996
+      MONGO_PASSWORD: "@admADM1996"
 
       TOKEN_SECRET: toilahuong
       TOKEN_EXPIRESIN: 1h
