update github ci

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,6 +29,7 @@ jobs:
     - run: |
         npm i
         npm run build
+        npm run build:next
         pm2 delete all
         pm2 start ecosystem.config.js
         pm2 save
