--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,6 +37,21 @@ jobs:
           ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
     - run: |
         npm i
+        touch .env
+        echo PORT=${{ secrets.PORT }} >> .env
+        echo APP_NAME=${{ secrets.APP_NAME }} >> .env
+        echo NEXT_PUBLIC_APP_URL=${{ secrets.NEXT_PUBLIC_APP_URL }} >> .env
+        echo MONGO_CONNECTSTRING=${{ secrets.MONGO_CONNECTSTRING }} >> .env
+        echo MONGO_USER=${{ secrets.MONGO_USER }} >> .env
+        echo MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} >> .env
+        echo TOKEN_SECRET=${{ secrets.TOKEN_SECRET }} >> .env
+        echo TOKEN_EXPIRESIN=${{ secrets.TOKEN_EXPIRESIN }} >> .env
+        echo REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }} >> .env
+        echo REFRESH_TOKEN_EXPIRESIN=${{ secrets.REFRESH_TOKEN_EXPIRESIN }} >> .env
+        echo SALT_ROUNDS=${{ secrets.SALT_ROUNDS }} >> .env
+        echo REDIS_SERVER=${{ secrets.REDIS_SERVER }} >> .env
+        echo REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} >> .env
+        echo SERVER_FILE_MANAGER=${{ secrets.SERVER_FILE_MANAGER }} >> .env
         npm run build
         npm run build:next
         pm2 stop ecosystem.config.js
