--- a/.env.example
+++ b/.env.example
@@ -15,4 +15,8 @@ SALT_ROUNDS = 10
 
 REDIS_SERVER = redis://104.248.151.29:6379
 REDIS_PASSWORD = 
-SERVER_FILE_MANAGER = 
+
+DO_ACCESS_KEY_ID=
+DO_SECRET_ACCESS_KEY=
+S3_ENDPOINT=
+S3_BUCKET_NAME=
