--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "NODE_ENV=production node dist/index.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.100.0",
     "@hookstate/core": "^3.0.13",
     "@hookstate/persistence": "^3.0.0",
     "@socket.io/redis-adapter": "^7.2.0",
@@ -26,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.3",
     "multer": "^1.4.4-lts.1",
+    "multer-s3": "^3.0.1",
     "next": "12.1.0",
     "next-build-id": "^3.0.0",
     "node-fetch": "^2.6.1",
@@ -49,6 +51,7 @@
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/multer-s3": "^2.7.12",
     "@types/node": "17.0.21",
     "@types/passport-jwt": "^3.0.6",
     "@types/react": "17.0.39",
