--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "server/services/images"]
-	path = server/services/images
-	url = git@github.com:TLH-submodules/images.git
-[submodule "server/service/files"]
-	path = server/service/files
+[submodule "server/services/files"]
+	path = server/services/files
 	url = git@github.com:TLH-submodules/files.git
