--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,8 @@ jobs:
     - name: Checkout repository and submodules
       uses: actions/checkout@v3
       with:
-        submodules: recursive
+        submodules: 'true'
+        token: ${{ secrets.PAT_TOKEN }}
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
