--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,9 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "master, main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "master, main" ]
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -17,12 +17,7 @@ jobs:
         node-version: [16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-    - name: Checkout repository and submodules
-      uses: actions/checkout@v3
-      with:
-        submodules: 'true'
-        
-        token: ${{ secrets.PAT_TOKEN }}
+    - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -56,10 +51,7 @@ jobs:
         echo SALT_ROUNDS=${{ secrets.SALT_ROUNDS }} >> .env
         echo REDIS_SERVER=${{ secrets.REDIS_SERVER }} >> .env
         echo REDIS_PASSWORD=${{ secrets.REDIS_PASSWORD }} >> .env
-        echo DO_ACCESS_KEY_ID=${{ secrets.DO_ACCESS_KEY_ID }} >> .env
-        echo DO_SECRET_ACCESS_KEY=${{ secrets.DO_SECRET_ACCESS_KEY }} >> .env
-        echo S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }} >> .env
-        echo S3_ENDPOINT=${{ secrets.S3_ENDPOINT }} >> .env
+        echo SERVER_FILE_MANAGER=${{ secrets.SERVER_FILE_MANAGER }} >> .env
         npm run build
         npm run build:next
         pm2 stop ecosystem.config.js
