--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,10 +15,12 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-        
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout repo and submodules
+      uses: actions/checkout@v3
+      with: 
+        submodules: recursive
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
